# edgesentry

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml  zones.json
docs/: architecture.md  setup-pi5.md
models/: README.md
scripts/: benchmark.py  convert_onnx_to_hef.sh  pull_llm.sh
src/edgesentry/: __init__.py  __main__.py  config.py
src/edgesentry/agent/: __init__.py  agent.py  llm.py  prompts.py  tools.py
src/edgesentry/alerting/: __init__.py  telegram.py
src/edgesentry/events/: __init__.py  ingestor.py  models.py  store.py
src/edgesentry/perception/: __init__.py  camera.py  detector.py  reid.py  zones.py
src/edgesentry/rag/: __init__.py  embedder.py  retriever.py  vectorstore.py
src/edgesentry/tasks/: __init__.py  journaler.py
src/edgesentry/web/: __init__.py  app.py  routes.py  sse.py
src/edgesentry/web/static/css/: dashboard.css
src/edgesentry/web/static/js/: chat.js  dashboard.js
src/edgesentry/web/templates/: index.html
tests/: conftest.py  test_agent.py  test_events.py  test_rag.py  test_web.py  test_zones.py
